fix: Alignment fix

--- a/my-portfolio/src/Assets/style.css
+++ b/my-portfolio/src/Assets/style.css
@@ -238,8 +238,6 @@ h4.Title-Heading::before{
         width: 3.5rem;
         gap: 0.75rem;
     }
-
-
 }
 
 @media (max-width: 913px) {
@@ -271,13 +269,10 @@ h4.Title-Heading::before{
         margin-top: 0;
         padding-top: 0;
         border: none;
+        width: 18rem;
     }
 
     .AboutMe .Content-Section{
         width: 85vw;
     }
-
-
-
-
 }
